# coretrace-tool-template

./: CMakeLists.txt  README.md  main.cpp
extern-project/: CMakeLists.txt
extern-project/src/: main.c
src/: your_tool_name.cpp
